--- a/OnlineShoppingStore.WebUI/Web.config
+++ b/OnlineShoppingStore.WebUI/Web.config
@@ -32,4 +32,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="EFDBContext" connectionString="Data Source=.; Initial Catalog=OnlineShoppingStore; Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
