--- a/OnlineShoppingStore.WebUI/OnlineShoppingStore.WebUI.csproj
+++ b/OnlineShoppingStore.WebUI/OnlineShoppingStore.WebUI.csproj
@@ -151,6 +151,7 @@
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
+    <Content Include="Views\Shared\ProductSummary.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
